2007-11-01  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm (_is_safe): Correct cluck message to match uid check
	(thanks to Alexey Tourbin RT #14218)

2007-10-31  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm (tempfile): Add TMPDIR flag to simplify 
	    tempfile(template, DIR => File::Spec->tmpdir) and to remove confusion
	for tempdir interface. (thanks to Brendan O'Dea)

	* META.yml: Update to v1.0 spec YAML spec. (thanks to Alexandr Ciornii)

	* Temp.pm: Localize $@ when using eval to prevent leakage (prompted by Zefram)
	
	* Makefile.PL: Support LICENSE in newer ExtUtils::MakeMaker implementations
	(thanks to Alexandr Ciornii)

2007-10-31  Tim Jenness  <tjenness@cpan.org>

	* t/seekable.t: Skip seek test on older IO::Seekable versions.
	(thanks to Sebastien Aperghis-Tramoni)
	
	* Temp.pm: Allow XXX replacement to run on perl 5.005 and 5.004.
	(thanks to Sebastien Aperghis-Tramoni)

2007-10-29  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm: Fix range of random character determination such that the last character
	in the list (_) will appear occassionally. (Thanks to Peter Dintelmann)

	* Temp.pm: Clarify error message when parent directory does not exist (thanks to
	Peter Dintelmann)

	* Temp.pm: Carp::Heavy does not exist on older perls (eg 5.005) so wrap the require
	in an eval (Thanks to Sebastien Aperghis-Tramoni, Jesse Vincent, Slaven Rezic
	and Robin Barker)

	* Temp.pm: Replace "new File::Temp" with "File::Temp->new" at the behest of H. Merijn Brand
	
2007-01-21 Tim Jenness <tjenness@cpan.org>

	--- RELEASE 0.18 CPAN ---
	
	* Temp.pm: Provide "cmp" overloading so File::Temp object can
	be compared to filename directly. (Rafael Garcia-Suarez)
	
	* Temp.pm: Remove umask control (was not thread-safe)
	(thanks to Peter Dintelmann, Gisle Aas)

	* t/cmp.t: New test file
	
2006-08-18  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE 0.17 CPAN ----
	
	* Temp.pm: Also inherit from IO::Seekable so that seek and tell